fixed app crashing if window is too small

--- a/src/index.css
+++ b/src/index.css
@@ -309,6 +309,7 @@ p{
 .arrow-img{
   height: 50px;
   width: 50px;
+  margin: 10px
 }
 
 .footer-container{ 
